--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "4.0.0",
-    "styled-components": "5.3.0"
+    "styled-components": "5.3.0",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
-    "typescript": "4.1.3"
+    "@types/react": "^17.0.19",
+    "@types/styled-components": "^5.1.12"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": [
     ">0.2%",
